story #7175 add bulk update to revert essential metadata